# vector

vector/: vector.cabal
vector-stream/: vector-stream.cabal
