Cabal-Version:  3.0
Name:           vector-stream
Version:        0.1.0.1


Tested-With:
  GHC == 8.0.2
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.7
  GHC == 9.0.2
  GHC == 9.2.8
  GHC == 9.4.8
  GHC == 9.6.4
  GHC == 9.8.2

Build-Type:     Simple

Extra-Source-Files:
      changelog.md
      README.md

Library
  Default-Language: Haskell2010

  Exposed-Modules:
        Data.Stream.Monadic

  Hs-Source-Dirs:
        src

  Build-Depends: base
               , ghc-prim

source-repository head
  type:     git
  location: https://github.com/haskell/vector.git
  subdir:   vector-stream
