Cabal-Version:  3.0
Build-Type:     Simple
Name:           vector
Version:        0.13.1.0
-- don't forget to update the changelog file!
License:        BSD-3-Clause
License-File:   LICENSE
Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
Maintainer:     Haskell Libraries Team <libraries@haskell.org>
                Alexey Kuleshevich <alexey@kuleshevi.ch>,
                Aleksey Khudyakov <alexey.skladnoy@gmail.com>,
                Andrew Lelechenko <andrew.lelechenko@gmail.com>
Copyright:      (c) Roman Leshchinskiy 2008-2012,
                    Alexey Kuleshevich 2020-2022,
                    Aleksey Khudyakov 2020-2022,
                    Andrew Lelechenko 2020-2022

Homepage:       https://github.com/haskell/vector
Bug-Reports:    https://github.com/haskell/vector/issues
Category:       Data, Data Structures
Synopsis:       Efficient Arrays
Description:
        .
        An efficient implementation of @Int@-indexed arrays (both mutable
        and immutable), with a powerful loop optimisation framework .
        .
        It is structured as follows:
        .
        ["Data.Vector"] Boxed vectors of arbitrary types.
        .
        ["Data.Vector.Unboxed"] Unboxed vectors with an adaptive
        representation based on data type families.
        .
        ["Data.Vector.Storable"] Unboxed vectors of 'Storable' types.
        .
        ["Data.Vector.Primitive"] Unboxed vectors of primitive types as
        defined by the @primitive@ package. "Data.Vector.Unboxed" is more
        flexible at no performance cost.
        .
        ["Data.Vector.Generic"] Generic interface to the vector types.
        .
        There is also a (draft) tutorial on common uses of vector.
        .
        * <http://haskell.org/haskellwiki/Numeric_Haskell:_A_Vector_Tutorial>

Tested-With:
  GHC == 8.0.2
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.7
  GHC == 9.0.2
  GHC == 9.2.8
  GHC == 9.4.8
  GHC == 9.6.4
  GHC == 9.8.2

Extra-doc-files:
      changelog.md
      README.md
      tests/LICENSE
Extra-Source-Files:
      tests/Setup.hs
      internal/GenUnboxTuple.hs
      internal/unbox-tuple-instances

source-repository head
  type:     git
  location: https://github.com/haskell/vector.git
  subdir:   vector

Flag BoundsChecks
  Description: Enable bounds checking
  Default: True
  Manual: True

Flag UnsafeChecks
  Description: Enable bounds checking in unsafe operations at the cost of a
               significant performance penalty
  Default: False
  Manual: True

Flag InternalChecks
  Description: Enable internal consistency checks at the cost of a
               significant performance penalty
  Default: False
  Manual: True

Flag Wall
  Description: Enable all -Wall warnings
  Default: False
  Manual: True

-- This common sets warning flags passed to GHC as controlled by Wall cabal flag
common flag-Wall
  Ghc-Options: -Wall
  if !flag(Wall)
    Ghc-Options: -fno-warn-orphans
    if impl(ghc >= 8.0) && impl(ghc < 8.1)
      Ghc-Options:   -Wno-redundant-constraints


Library
  import:           flag-Wall
  Default-Language: Haskell2010
  Other-Extensions:
        BangPatterns
        CPP
        DeriveDataTypeable
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        KindSignatures
        MagicHash
        MultiParamTypeClasses
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TypeFamilies

  Exposed-Modules:
        Data.Vector.Internal.Check

        Data.Vector.Fusion.Util
        Data.Vector.Fusion.Stream.Monadic
        Data.Vector.Fusion.Bundle.Size
        Data.Vector.Fusion.Bundle.Monadic
        Data.Vector.Fusion.Bundle

        Data.Vector.Generic.Mutable.Base
        Data.Vector.Generic.Mutable
        Data.Vector.Generic.Base
        Data.Vector.Generic.New
        Data.Vector.Generic

        Data.Vector.Primitive.Mutable
        Data.Vector.Primitive

        Data.Vector.Storable.Internal
        Data.Vector.Storable.Mutable
        Data.Vector.Storable

        Data.Vector.Unboxed.Base
        Data.Vector.Unboxed.Mutable
        Data.Vector.Unboxed

        Data.Vector.Mutable
        Data.Vector

  Hs-Source-Dirs:
        src

  Include-Dirs:
        include, internal

  Install-Includes:
        vector.h

  Build-Depends: base
               , primitive
               , deepseq
               , vector-stream

  Ghc-Options: -O2

  if flag(BoundsChecks)
    cpp-options: -DVECTOR_BOUNDS_CHECKS

  if flag(UnsafeChecks)
    cpp-options: -DVECTOR_UNSAFE_CHECKS

  if flag(InternalChecks)
    cpp-options: -DVECTOR_INTERNAL_CHECKS
